--- a/src/css/sem_style.css
+++ b/src/css/sem_style.css
@@ -3,8 +3,8 @@
 
 body {
   
-   font-family: "Trebuchet MS", Helvetica, sans-serif;
-   background-image: url('../img/bg_gray.png');
+/*    font-family: "Trebuchet MS", Helvetica, sans-serif; */
+/*    background-image: url('../img/bg_gray.png'); */
   
 }
 
@@ -65,7 +65,7 @@ color: #00FF00; /*not working*/
 
 #sem_header {
  background-color: lightgray; 
- color:       black;
+/*  color:       black; */
 }
 
 
@@ -102,66 +102,8 @@ table.sem_item td,th,tr  {
 /* Item image  ============================== */
 
 img.sem_image {
-/* clip-path: inset(10px 20px 30px 40px); */
-/*      clip: rect(0px,60px,200px,0px); */
 height: 100px;
 width: 100px;
-/*      margin-left:   10px; */
-/*      margin-right:  10px; */
-/*      margin-top:    10px; */
-/*      margin-bottom: 10px; */
-/*  or, we could place the image inside a div */
-  
 }
 
-/*.image-container {
-  background-image: url('http://i.stack.imgur.com/GA6bB.png');
-  background-size:cover;
-  background-repeat:no-repeat;
-  width:250px;
-  height:250px;
-} */
 /* http://stackoverflow.com/questions/15167545/how-to-crop-a-rectangular-image-into-a-square-with-css */
-
-
-/* Item abstract  ============================== */
-
-span.abst {
-  display: none;
-}
-
-.show_hide {
-    display:none;
-}
-.plus:after {
-    content:" +";
-}
-.minus:after {
-    content:" -";
-}
-
-
-
-/* ============================== */
-/* Table (old) ============================== */
-/* ============================== */
-
-
-table.sem_table {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-table.sem_table td,th,tr  {
-  padding-left:   10px;
-  padding-right:  10px;
-  padding-top:     5px;
-  padding-bottom:  5px;
-  border: 1px solid black;
-}
-
-table.sem_table thead {
- background:maroon;
- color:white;
-}
-
