--- a/src/css/sem_style.css
+++ b/src/css/sem_style.css
@@ -1,14 +1,4 @@
 
-/* Body ====================== */
-
-body {
-  
-/*    font-family: "Trebuchet MS", Helvetica, sans-serif; */
-/*    background-image: url('../img/bg_gray.png'); */
-  
-}
-
-
 /* Navigation bar ====================== */
 
 #my_nav {
@@ -17,7 +7,7 @@ body {
    font-weight: bold;
 /* height: 100px; */
    border: 0px;
-   color: #00FF00;  /*not working*/
+   color: white; #00FF00;  /*not working*/
 /*    box-shadow: 10px grey; */
 }
 
@@ -65,7 +55,6 @@ color: #00FF00; /*not working*/
 
 #sem_header {
  background-color: lightgray; 
-/*  color:       black; */
 }
 
 
@@ -88,7 +77,7 @@ table.sem_item {
 }
 
 table.sem_item td,th,tr  {
-/*   background-color: lightgray; */
+    
   padding-left:   10px;
   padding-right:  10px;
   padding-top:     5px;
@@ -96,14 +85,14 @@ table.sem_item td,th,tr  {
   border: none;
   border-spacing: 0;
   border-color: transparent;
+  
 }
 
 
-/* Item image  ============================== */
+/* Item image  */
 
-img.sem_image {
-height: 100px;
-width: 100px;
+ .sem_image {
+    border-radius: 30%;
+    height: 100px;
+    width: 100px;
 }
-
-/* http://stackoverflow.com/questions/15167545/how-to-crop-a-rectangular-image-into-a-square-with-css */
