Improved paths in nav bar

--- a/src/css/sem_style.css
+++ b/src/css/sem_style.css
@@ -7,7 +7,7 @@
    font-weight: bold;
 /* height: 100px; */
    border: 0px;
-   color: white; #00FF00;  /*not working*/
+   color: white; #FF0000;  /*not working*/
 /*    box-shadow: 10px grey; */
 }
 
@@ -16,15 +16,15 @@
  background-color: #303030;
 font-family: "Courier Bold", Courier, monospace;
 font-weight: bold;
-color: #00FF00; /*not working*/
+color: #FF0000; /*not working*/
 }
 
 .navbar-inverse .navbar-brand {
-  color: #00FF00;    /*somehow this wins over my_nav and my_navbar... does the class win over the instance?*/
+  color: #FF0000;    /*somehow this wins over my_nav and my_navbar... does the class win over the instance?*/
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    color: #00FF00;  /*looking at the inspector I found how to have this override the rest*/
+    color: #FF0000;  /*looking at the inspector I found how to have this override the rest*/
 }
 
 #compensate_navbar_height {
