--- a/src/css/sem_style.css
+++ b/src/css/sem_style.css
@@ -1,28 +1,18 @@
 /* Banner =============================== */
 
-.my_banner {
+.main_banner {
     background-image: url("../img/field_bright_sky.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-/*     overflow: hidden; */ /*what is this for?*/
     color: white;
-     text-shadow: 0 1px 0 white, 0 0 5px white;
-     margin-bottom: 0px;
-     padding-top: 0px;
-     padding-bottom: 0px;
+    text-shadow: 0 1px 0 white, 0 0 5px white;
 }
 
-.my_filter {
+.filter_to_read_fonts_on_images {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-/* Coordinates =============================== */
 
-#sem_header {
- background-color: lightgray; 
-}
-
-/* ============================== */
 /* Item, table ============================== */
 
 table.sem_item {
