--- a/src/css/sem_style.css
+++ b/src/css/sem_style.css
@@ -64,3 +64,16 @@ table.sem_item td,th,tr  {
     margin-bottom: 0;
   }
 }
+
+
+/* Classes for arrow up or down ============================== */
+
+ i.arrow_down {
+  border: solid black;  border-width: 0 2px 2px 0; display: inline-block;  padding: 3px; transform: rotate(45deg) translate(0px,-3px); -webkit-transform: rotate(45deg) translate(0px,-3px);
+ }
+ 
+ i.arrow_up {
+  border: solid black;  border-width: 0 2px 2px 0; display: inline-block;  padding: 3px; transform: rotate(-135deg) translate(0px,-3px); -webkit-transform: rotate(-135deg) translate(0px,-3px);
+ }
+ 
+ 
