Added blackboard image

--- a/src/css/sem_style.css
+++ b/src/css/sem_style.css
@@ -1,7 +1,7 @@
 /* Banner =============================== */
 
 .main_banner {
-    background-image: url("../img/field_bright_sky.jpg");
+    background-image: url("../img/blackboard.png");
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
